Music added, etc.

--- a/Assignment03/Properties/Resources.resx
+++ b/Assignment03/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="elephant" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\elephant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="music" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\music.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="phwoah" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\phwoahmelinda.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
